--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -7,15 +7,57 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>onlineshopping Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+	<javaee.version>7.0</javaee.version>
+	<spring.version>4.3.6.RELEASE</spring.version>
+  </properties>
   <dependencies>
+  <!--  JAVA EE API --> 
+  <dependency>
+  <groupId>javax</groupId>
+  <artifactId>javaee-api</artifactId>
+  <version>${javaee.version}</version>
+  <scope>provided</scope>
+  </dependency>
+  
+  <!-- JUNIT -->
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- SPRING -->
+<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-webmvc</artifactId>
+	<version>${spring.version}</version>
+</dependency>
+    
+    
+  <!-- JSTL -->
+<dependency>
+	<groupId>jstl</groupId>
+	<artifactId>jstl</artifactId>
+	<version>1.2</version>
+</dependency>  
+    
   </dependencies>
   <build>
+  <plugins>
+  <!-- Update to latest version of JAVA -->
+  
+    <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+        <source>1.8</source>
+        <target>1.8</target>
+        </configuration>
+        </plugin> 
+  </plugins>
     <finalName>onlineshopping</finalName>
   </build>
 </project>
