Successfully Updated the UI and linked with backend project!

--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -12,6 +12,14 @@
 	<spring.version>4.3.6.RELEASE</spring.version>
   </properties>
   <dependencies>
+  <!-- Link backend project -->
+  <dependency>
+  <groupId>net.imr</groupId>
+	<artifactId>shoppingbackend</artifactId>
+	<version>0.0.1-SNAPSHOT</version>  
+  </dependency>
+  
+   
   <!--  JAVA EE API --> 
   <dependency>
   <groupId>javax</groupId>
